--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>MohammedSiddiq</title>
 </html>
 <body>
-<h1>Mohammed Siddiq
+<h1>Mohammed Siddiq</h1>
     <h2>Hello World</h2>
 </body>
 </html>
